[tool.poetry]
name = "whisper-streaming"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
librosa = "^0.10.2.post1"
soundfile = "^0.12.1"
faster-whisper = "^1.0.3"
numpy = "<2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
